--- a/manifest.json
+++ b/manifest.json
@@ -16,9 +16,23 @@
     "open_url1": {
       "suggested_key": {
         "default": "Ctrl+Shift+1",
-        "mac": "Command+Shift+1"
+        "mac": "MacCtrl+Shift+1"
       },
-      "description": "Open URL 1"
+      "description": "GitHub Enterprise: open Searchlight pull requests"
+    },
+    "open_url2": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+2",
+        "mac": "MacCtrl+Shift+2"
+      },
+      "description": "Jira: Searchlight spring board"
+    },
+    "open_url3": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+3",
+        "mac": "MacCtrl+Shift+3"
+      },
+      "description": "Jira: Searchlight user story map"
     }
   },
   "background": {
